Изменено расположение плюшек на 3+2

--- a/index.html
+++ b/index.html
@@ -366,7 +366,8 @@
     </div>
 
     <!-- Service Box start -->
-    <div class="col-md-6">
+    <div class="col-md-4">
+    <!--<div class="col-md-6">-->
       <div class="service-box wow fadeInLeft" data-wow-offset="100">
         <div class="service-icon">+</div>
         <h3 class="service-title">Четкие сроки</h3>
@@ -378,10 +379,37 @@
     <!-- Service Box end -->
 
     <!-- Service Box start -->
+    <!--<div class="col-md-6">-->
+    <div class="col-md-4">
+      <div class="service-box wow fadeInLeft" data-wow-offset="100">
+        <div class="service-icon">+</div>
+        <h3 class="service-title">Только ручные швы</h3>
+
+        <div class="clearfix"></div>
+        <p class="service-content"><i>Присмотреться...</i><br>&nbsp;</p>
+      </div>
+
+    </div>
+    <!-- Service Box end -->
+
+    <!-- Service Box start -->
+    <div class="col-md-4">
+    <!--<div class="col-md-6">-->
+      <div class="service-box wow fadeInLeft" data-wow-offset="100">
+        <div class="service-icon">%</div>
+        <h3 class="service-title">Скидки</h3>
+
+        <div class="clearfix"></div>
+        <p class="service-content">Скидки на клубные заказы <br>+ <b>АКЦИИ</b> для вольных реконструкторов</p>
+      </div>
+    </div>
+    <!-- Service Box end -->
+
+    <!-- Service Box start -->
     <div class="col-md-6">
       <div class="service-box wow fadeInRight" data-wow-offset="100">
         <div class="service-icon">+</div>
-        <h3 class="service-title">Простой заказ + Доставка</h3>
+        <h3 class="service-title">Простой заказ</h3>
 
         <div class="clearfix"></div>
         <p class="service-content">Ваша новая пара всего в 2 встречах от Вас!<br><i>подробнее...</i></p>
@@ -391,41 +419,16 @@
 
     <!-- Service Box start -->
     <div class="col-md-6">
+    <!--<div class="col-md-4">-->
       <div class="service-box wow fadeInRight" data-wow-offset="100">
         <div class="service-icon">+</div>
         <h3 class="service-title">Гарантия 1 ГОД</h3>
 
         <div class="clearfix"></div>
-        <p class="service-content">Уверенность в каждом шаге!</p>
+        <p class="service-content">Уверенность в каждом шаге!<br>&nbsp;</p>
       </div>
     </div>
     <!-- Service Box end -->
-
-    <!-- Service Box start -->
-    <div class="col-md-6">
-      <div class="service-box wow fadeInLeft" data-wow-offset="100">
-        <div class="service-icon">+</div>
-        <h3 class="service-title">Только ручные швы</h3>
-
-        <div class="clearfix"></div>
-        <p class="service-content"><i>Присмотреться...</i></p>
-      </div>
-    </div>
-    <!-- Service Box end -->
-
-    <!-- Single Service Box start -->
-    <div class="col-md-3"></div>
-    <div class="col-md-6">
-      <div class="service-box wow fadeInLeft" data-wow-offset="100">
-        <div class="service-icon">%</div>
-        <h3 class="service-title">Скидки</h3>
-
-        <div class="clearfix"></div>
-        <p class="service-content">Скидки на клубные заказы <br>+ <b>АКЦИИ</b> для вольных реконструкторов</p>
-      </div>
-    </div>
-    <div class="col-md-3"></div>
-    <!-- Single Service Box end -->
   </div>
 </section>
 <!-- Services end -->
