Земенены тексты в подписалке; Навигация дополнена ссылками "Схема работы" и "Подробности"

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <header data-spy="affix" data-offset-top="39" data-offset-bottom="0" class="large">
 
   <div class="row container box">
-    <div class="col-md-5">
+    <div class="col-md-3">
       <!-- Logo start -->
       <div class="brand">
         <h1><a class="scroll-to" href="#top"><img class="img-responsive" src="img/logo.gif"
@@ -59,7 +59,7 @@
       <!-- Logo end -->
     </div>
 
-    <div class="col-md-7">
+    <div class="col-md-9">
       <div class="pull-right">
         <div class="header-info pull-right">
           <div class="contact pull-left">ЗВОНИТЕ: +375 (29) 779-33-81</div>
@@ -103,12 +103,13 @@
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <!-- Nav-Links start -->
             <ul class="nav navbar-nav navbar-right">
+              <!--<li><a href="#vehicles" class="scroll-to">Vehicle Models</a></li>-->
+              <!--<li><a href="#locations" class="scroll-to">Locations</a></li>-->
               <li class="active"><a href="#top" class="scroll-to">В начало</a></li>
               <li><a href="#services" class="scroll-to">Плюшки и Бонусы</a></li>
-              <!--<li><a href="#vehicles" class="scroll-to">Vehicle Models</a></li>-->
               <li><a href="#reviews" class="scroll-to">Отзывы</a></li>
-              <!--<li><a href="#reviews" class="scroll-to">Подробности</a></li>-->
-              <!--<li><a href="#locations" class="scroll-to">Locations</a></li>-->
+              <li><a href="#information" class="scroll-to">Подробности</a></li>
+              <li><a href="#workplan" class="scroll-to">Схема работы</a></li>
               <li><a href="#contact" class="scroll-to">Контакты</a></li>
             </ul>
             <!-- Nav-Links end -->
@@ -386,7 +387,7 @@
         <h3 class="service-title">Только ручные швы</h3>
 
         <div class="clearfix"></div>
-        <p class="service-content"><i>Присмотреться...</i><br>&nbsp;</p>
+        <p class="service-content"><a href="#information" class="scroll-to"><i>Присмотреться...</i></a><br>&nbsp;</p>
       </div>
 
     </div>
@@ -412,7 +413,7 @@
         <h3 class="service-title">Простой заказ</h3>
 
         <div class="clearfix"></div>
-        <p class="service-content">Ваша новая пара всего в 2 встречах от Вас!<br><i>подробнее...</i></p>
+        <p class="service-content">Ваша новая пара всего в 2 встречах от Вас!<br><a href="#workplan" class="scroll-to"><i>подробнее...</i></a></p>
       </div>
     </div>
     <!-- Service Box end -->
@@ -442,16 +443,18 @@
         <div class="alert hidden" id="newsletter-form-msg"></div>
       </div>
       <div class="col-md-5 col-xs-12">
-        <h2 class="title">Sign up for amazing offers
-          <span class="subtitle">exclusive access for offers and promotions</span></h2>
+        <!--<h2 class="title">Sign up for amazing offers-->
+          <!--<span class="subtitle">exclusive access for offers and promotions</span></h2>-->
+        <h2 class="title">Подпишись на новости
+          <span class="subtitle">узнавай об акциях вовремя</span></h2>
       </div>
       <div class="col-md-7">
         <div class="newsletter-form pull-left">
           <form action="#" method="post" name="newsletter-form" id="newsletter-form">
             <div class="input-group">
-              <input type="email" name="newsletter-email" class="form-control" placeholder="Enter your Email Address">
+              <input type="email" name="newsletter-email" class="form-control" placeholder="Укажите Ваш Email">
                         <span class="input-group-btn">
-                          <input class="btn btn-default button" type="submit" value="send">
+                          <input class="btn btn-default button" type="submit" value="узнать">
                         </span>
             </div>
           </form>
@@ -1020,12 +1023,18 @@
     <div class="row">
       <div class="col-md-12 text-center">
         <ul class="footer-nav">
-          <li><a class="scroll-to" href="#top">Home</a></li>
-          <li><a class="scroll-to" href="#services">Service</a></li>
-          <li><a class="scroll-to" href="#vehicles">Vehicle Models</a></li>
-          <li><a class="scroll-to" href="#reviews">Reviews</a></li>
-          <li><a class="scroll-to" href="#locations">Locations</a></li>
-          <li><a class="scroll-to" href="#contact">Contact</a></li>
+          <!--<li><a class="scroll-to" href="#top">Home</a></li>-->
+          <!--<li><a class="scroll-to" href="#services">Service</a></li>-->
+          <!--<li><a class="scroll-to" href="#vehicles">Vehicle Models</a></li>-->
+          <!--<li><a class="scroll-to" href="#reviews">Reviews</a></li>-->
+          <!--<li><a class="scroll-to" href="#locations">Locations</a></li>-->
+          <!--<li><a class="scroll-to" href="#contact">Contact</a></li>-->
+          <li><a href="#top" class="scroll-to">В начало</a></li>
+          <li><a href="#services" class="scroll-to">Плюшки и Бонусы</a></li>
+          <li><a href="#reviews" class="scroll-to">Отзывы</a></li>
+          <li><a href="#information" class="scroll-to">Подробности</a></li>
+          <li><a href="#workplan" class="scroll-to">Схема работы</a></li>
+          <li><a href="#contact" class="scroll-to">Контакты</a></li>
         </ul>
         <div class="clearfix"></div>
         <p class="copyright">©2014 Themeinjection, All Rights Reserved</p>
