Земенены тексты в подрбностях; Отзывы перемещены ниже партнеров Партнёры раскомментированы Добавлены заглушки картинок для подробностей

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
     <!-- Service Box start -->
     <!--<div class="col-md-6">-->
     <div class="col-md-4">
-      <div class="service-box wow fadeInLeft" data-wow-offset="100">
+      <div class="service-box wow fadeInDown" data-wow-offset="100">
         <div class="service-icon">+</div>
         <h3 class="service-title">Только ручные швы</h3>
 
@@ -396,7 +396,7 @@
     <!-- Service Box start -->
     <div class="col-md-4">
     <!--<div class="col-md-6">-->
-      <div class="service-box wow fadeInLeft" data-wow-offset="100">
+      <div class="service-box wow fadeInRight" data-wow-offset="100">
         <div class="service-icon">%</div>
         <h3 class="service-title">Скидки</h3>
 
@@ -408,7 +408,7 @@
 
     <!-- Service Box start -->
     <div class="col-md-6">
-      <div class="service-box wow fadeInRight" data-wow-offset="100">
+      <div class="service-box wow fadeInLeft" data-wow-offset="100">
         <div class="service-icon">+</div>
         <h3 class="service-title">Простой заказ</h3>
 
@@ -765,6 +765,95 @@
 <!-- Vehicles end -->
 
 
+<!-- Locations start -->
+<!-- <section id="locations">
+   <div class="container location-select-container wow bounceInDown" data-wow-offset="200">
+     <div class="row">
+       <div class="col-md-8 col-md-offset-2">
+         <div class="location-select">
+           <div class="row">
+             <div class="col-md-6">
+               <h2>Car Rental Locations</h2>
+             </div>
+             <div class="col-md-6">
+               <div class="styled-select-location">
+                 <select id="location-map-select"></select>
+               </div>
+             </div>
+           </div>
+         </div>
+       </div>
+     </div>
+     <div class="arrow-down-location">&nbsp;</div>
+   </div>
+   <div class="map wow bounceInUp" data-wow-offset="100">&lt;!&ndash; map by gmap3 &ndash;&gt;</div>
+ </section>-->
+<!-- Locations end -->
+
+
+<!-- Information start -->
+<section id="information" class="container">
+
+  <!-- Single photo start -->
+  <div class="row wow fadeInLeft" data-wow-offset="100">
+    <div class="col-md-6 col-xs-12 pull-right">
+      <img src="img/garant2.jpg" alt="Handmade stiches" class="img-responsive">
+    </div>
+    <div class="col-md-6 pull-left">
+      <h2 class="title">Опыт - гарантия качества</h2>
+      <h3 class="subtitle">15 лет реконструкции / 7 лет работы с обувью</h3>
+      <p>Мы используем только аутентичные ручные швы, описанные в признанных работах по археологическим источникам.
+         <br>А опыт современных мастеров сапожного дела позволяет изготовить Ваш заказ быстрее.</p>
+    </div>
+  </div>
+  <!-- Single photo end -->
+
+  <!-- Video start -->
+  <!--          <div class="row wow fadeInRight" data-wow-offset="50">
+              <div class="col-md-6">
+                <div class="video">
+                  &lt;!&ndash; Youtube iframe start &ndash;&gt;
+                  <iframe width="420" height="315" src="//www.youtube.com/embed/9_5pjZlWV3A?rel=0&autoplay=0" allowfullscreen></iframe>
+                  &lt;!&ndash; Youtube iframe end &ndash;&gt;
+                </div>
+              </div>
+              <div class="col-md-6">
+                <h2 class="title">Watch our info tour</h2>
+                <h3 class="subtitle">You can also show youtube videos in this section!</h3>
+                <p>Here is some dummy text. Lorem ipsum dolor sit amet, <span class="label label-default">This is an labeled text snippet!</span>, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, vero voluptas delectus explicabo maxime ad qui incidunt! no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>-->
+  <!-- Video end -->
+</section>
+<!-- Information end -->
+
+<!-- Partners start -->
+<section id="partners" class="wow fadeIn" data-wow-offset="50">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h2>Нам доверяют</h2>
+        <span class="underline">&nbsp;</span>
+        <h3>Ведущие клубы Беларуси:</h3>
+        <br>
+        <!--<p>To contribute to positive change and achieve our sustainability goals, we partner with many extraordinary organizations around the world. Their expertise enables us to do far more than we could alone, and their passion and talent inspire us. It is our pleasure to introduce you to a handful of the organizations whose accomplishments and commitments are representative of all the organizations we are fortunate to call our partners.</p>-->
+      </div>
+      <div class="col-md-4 col-xs-4 text-center">
+        <img src="img/partner1.png" alt="Lucern" class="img-responsive wow fadeInUp" data-wow-delay="0.5s" data-wow-offset="200">
+      </div>
+      <div class="col-md-4 col-xs-4 text-center">
+        <img src="img/partner2.png" alt="Bely Tur" class="img-responsive wow fadeInUp" data-wow-delay="1s" data-wow-offset="200">
+      </div>
+      <div class="col-md-4 col-xs-4 text-center">
+        <img src="img/partner3.png" alt="Minsk Archery Guild" class="img-responsive wow fadeInUp" data-wow-delay="1.5s" data-wow-offset="200">
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Partners end -->
+
+
 <!-- Reviews start -->
 <section id="reviews" class="container wow fadeInUp">
   <div class="row text-center">
@@ -836,105 +925,84 @@
 </section>
 <!-- Reviews end -->
 
+<!--TODO поставить кнопку "ЗАКАЗАТЬ" -->
 
-<!-- Locations start -->
-<!-- <section id="locations">
-   <div class="container location-select-container wow bounceInDown" data-wow-offset="200">
-     <div class="row">
-       <div class="col-md-8 col-md-offset-2">
-         <div class="location-select">
-           <div class="row">
-             <div class="col-md-6">
-               <h2>Car Rental Locations</h2>
-             </div>
-             <div class="col-md-6">
-               <div class="styled-select-location">
-                 <select id="location-map-select"></select>
-               </div>
-             </div>
-           </div>
-         </div>
-       </div>
-     </div>
-     <div class="arrow-down-location">&nbsp;</div>
-   </div>
-   <div class="map wow bounceInUp" data-wow-offset="100">&lt;!&ndash; map by gmap3 &ndash;&gt;</div>
- </section>-->
-<!-- Locations end -->
+<!-- WorkPlan start -->
+<!--<section id="workplan" class="container">-->
+  <!--<div class="row">-->
+    <!--<div class="col-md-12 title">-->
+      <!--&lt;!&ndash;<h2>Customer Services</h2>&ndash;&gt;-->
+      <!--<h2>как мы работаем</h2>-->
+      <!--<span class="underline">&nbsp;</span>-->
+    <!--</div>-->
 
+    <!--&lt;!&ndash; Service Box start &ndash;&gt;-->
+    <!--<div class="col-md-4">-->
+      <!--&lt;!&ndash;<div class="col-md-6">&ndash;&gt;-->
+      <!--<div class="service-box wow fadeInLeft" data-wow-offset="100">-->
+        <!--<div class="service-icon">+</div>-->
+        <!--<h3 class="service-title">Четкие сроки</h3>-->
 
-<!-- Information start -->
-<section id="information" class="container">
+        <!--<div class="clearfix"></div>-->
+        <!--<p class="service-content">Сроки изготовления от 1 месяца.<br>Нужно быстрее - пишите, договоримся!</p>-->
+      <!--</div>-->
+    <!--</div>-->
+    <!--&lt;!&ndash; Service Box end &ndash;&gt;-->
 
-  <!-- Single photo start -->
-  <div class="row wow fadeInLeft" data-wow-offset="100">
-    <div class="col-md-6 col-xs-12 pull-right">
-      <img src="img/info-img.jpg" alt="Info Img" class="img-responsive">
-    </div>
-    <div class="col-md-6 pull-left">
-      <h2 class="title">Quality Guaranteed</h2>
+    <!--&lt;!&ndash; Service Box start &ndash;&gt;-->
+    <!--&lt;!&ndash;<div class="col-md-6">&ndash;&gt;-->
+    <!--<div class="col-md-4">-->
+      <!--<div class="service-box wow fadeInDown" data-wow-offset="100">-->
+        <!--<div class="service-icon">+</div>-->
+        <!--<h3 class="service-title">Только ручные швы</h3>-->
 
-      <h3 class="subtitle">Here is an example with one single photo displayed on the right.</h3>
+        <!--<div class="clearfix"></div>-->
+        <!--<p class="service-content"><a href="#information" class="scroll-to"><i>Присмотреться...</i></a><br>&nbsp;</p>-->
+      <!--</div>-->
 
-      <p>Here is some dummy text. <span class="my-tooltip" data-toggle="tooltip" title=""
-                                        data-original-title="This is an demo tooltip!">Hover over me!</span> Lorem ipsum
-        dolor sit amet, consectetur adipisicing elit. Unde, vero voluptas delectus explicabo maxime ad qui incidunt!
-        Saepe.</p>
-      <a href="http://themeforest.net/item/car-rental-landing-page/8245093?ref=themeinjection" class="btn">More
-        information</a>
-      <a href="http://themeforest.net/item/car-rental-landing-page/8245093?ref=themeinjection" class="btn btn-gray">Buy
-        this theme</a>
-    </div>
-  </div>
-  <!-- Single photo end -->
+    <!--</div>-->
+    <!--&lt;!&ndash; Service Box end &ndash;&gt;-->
 
-  <!-- Video start -->
-  <!--          <div class="row wow fadeInRight" data-wow-offset="50">
-              <div class="col-md-6">
-                <div class="video">
-                  &lt;!&ndash; Youtube iframe start &ndash;&gt;
-                  <iframe width="420" height="315" src="//www.youtube.com/embed/9_5pjZlWV3A?rel=0&autoplay=0" allowfullscreen></iframe>
-                  &lt;!&ndash; Youtube iframe end &ndash;&gt;
-                </div>
-              </div>
-              <div class="col-md-6">
-                <h2 class="title">Watch our info tour</h2>
-                <h3 class="subtitle">You can also show youtube videos in this section!</h3>
-                <p>Here is some dummy text. Lorem ipsum dolor sit amet, <span class="label label-default">This is an labeled text snippet!</span>, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, vero voluptas delectus explicabo maxime ad qui incidunt! no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-              </div>
-            </div>-->
-  <!-- Video end -->
+    <!--&lt;!&ndash; Service Box start &ndash;&gt;-->
+    <!--<div class="col-md-4">-->
+      <!--&lt;!&ndash;<div class="col-md-6">&ndash;&gt;-->
+      <!--<div class="service-box wow fadeInRight" data-wow-offset="100">-->
+        <!--<div class="service-icon">%</div>-->
+        <!--<h3 class="service-title">Скидки</h3>-->
 
-</section>
-<!-- Information end -->
+        <!--<div class="clearfix"></div>-->
+        <!--<p class="service-content">Скидки на клубные заказы <br>+ <b>АКЦИИ</b> для вольных реконструкторов</p>-->
+      <!--</div>-->
+    <!--</div>-->
+    <!--&lt;!&ndash; Service Box end &ndash;&gt;-->
 
+    <!--&lt;!&ndash; Service Box start &ndash;&gt;-->
+    <!--<div class="col-md-6">-->
+      <!--<div class="service-box wow fadeInLeft" data-wow-offset="100">-->
+        <!--<div class="service-icon">+</div>-->
+        <!--<h3 class="service-title">Простой заказ</h3>-->
 
-<!-- Partners start -->
-<!--<section id="partners" class="wow fadeIn" data-wow-offset="50">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12 text-center">
-        <h2>Meet Our Partners</h2>
-        <span class="underline">&nbsp;</span>
-        <p>To contribute to positive change and achieve our sustainability goals, we partner with many extraordinary organizations around the world. Their expertise enables us to do far more than we could alone, and their passion and talent inspire us. It is our pleasure to introduce you to a handful of the organizations whose accomplishments and commitments are representative of all the organizations we are fortunate to call our partners.</p>
-      </div>
-      <div class="col-md-3 col-xs-6 text-center">
-        <img src="img/partner1.png" alt="Partner" class="img-responsive wow fadeInUp" data-wow-delay="0.5s" data-wow-offset="200">
-      </div>
-      <div class="col-md-3 col-xs-6 text-center">
-        <img src="img/partner2.png" alt="Partner" class="img-responsive wow fadeInUp" data-wow-delay="1s" data-wow-offset="200">
-      </div>
-      <div class="col-md-3 col-xs-6 text-center">
-        <img src="img/partner3.png" alt="Partner" class="img-responsive wow fadeInUp" data-wow-delay="1.5s" data-wow-offset="200">
-      </div>
-      <div class="col-md-3 col-xs-6 text-center">
-        <img src="img/partner4.png" alt="Partner" class="img-responsive wow fadeInUp" data-wow-delay="2s" data-wow-offset="200">
-      </div>
-    </div>
-  </div>
-</section>-->
-<!-- Partners end -->
+        <!--<div class="clearfix"></div>-->
+        <!--<p class="service-content">Ваша новая пара всего в 2 встречах от Вас!<br><a href="#workplan" class="scroll-to"><i>подробнее...</i></a></p>-->
+      <!--</div>-->
+    <!--</div>-->
+    <!--&lt;!&ndash; Service Box end &ndash;&gt;-->
+
+    <!--&lt;!&ndash; Service Box start &ndash;&gt;-->
+    <!--<div class="col-md-6">-->
+      <!--&lt;!&ndash;<div class="col-md-4">&ndash;&gt;-->
+      <!--<div class="service-box wow fadeInRight" data-wow-offset="100">-->
+        <!--<div class="service-icon">+</div>-->
+        <!--<h3 class="service-title">Гарантия 1 ГОД</h3>-->
+
+        <!--<div class="clearfix"></div>-->
+        <!--<p class="service-content">Уверенность в каждом шаге!<br>&nbsp;</p>-->
+      <!--</div>-->
+    <!--</div>-->
+    <!--&lt;!&ndash; Service Box end &ndash;&gt;-->
+  <!--</div>-->
+<!--</section>-->
+<!-- WorkPlan end -->
 
 
 <!-- Contact start -->
@@ -1014,7 +1082,7 @@
 <!-- Contact end -->
 
 
-<a href="#" class="scrollup">ScrollUp</a>
+<a href="#" class="scrollup">Наверх</a>
 
 
 <!-- Footer start -->
